--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,4 +11,7 @@
  * It is generally better to create a new file per style scope.
  *
  */
+ // Bootstrap
 @import "bootstrap";
+// Variables
+@import "base/variables";
