format global container in application.html.erb, format navbar, add favicon for development

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,16 +1,21 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>MikechaseApp</title>
+    <title>Michael Chase HQ</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <%= favicon_link_tag asset_path('favicon.ico'), :rel => 'icon', :type => 'image/x-icon' %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
     <%= render 'layouts/navigation' %>
-    <%= yield %>
+
+    <div class="offset-sm-1 col-sm-10">
+      <%= yield %>
+    </div>
+
   </body>
 </html>
