Add basic global styling and colors through sass variables, create globals.scss, create navigation.scss, import to application.scss

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,3 +15,7 @@
 @import "bootstrap";
 // Variables
 @import "base/variables";
+// Global Styles
+@import "base/globals";
+// Partials
+@import "partials/*";
