--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
     <%= render 'layouts/navigation' %>
 
-    <div class="offset-sm-1 col-sm-10">
+    <div class="offset-sm-1 col-sm-10 main-content">
       <%= yield %>
     </div>
 
