formatting navbar, added fonts as sass variables

--- a/app/assets/stylesheets/base/variables.scss
+++ b/app/assets/stylesheets/base/variables.scss
@@ -1,5 +1,11 @@
+// Colors
 $black: #090614;
 $purple: #5B3CC8;
 $green: #8fe612;
+$blue: #2979ff;
 $darkgray: #c3c1c7;
 $lightgray: #dbdadf;
+
+// Fonts
+$brandFont: 'Audiowide', cursive;
+$mainFont: 'Ubuntu', sans-serif;
