--- a/app/assets/stylesheets/partials/navigation.scss
+++ b/app/assets/stylesheets/partials/navigation.scss
@@ -1,3 +1,13 @@
 .navbar {
   background-color: $black;
 }
+.navbar-brand {
+  font-family: $brandFont;
+  font-weight: 600;
+  font-size: 1.8em;
+  color: $blue;
+}
+nav {
+  font-size: 1.7em;
+  font-family: $mainFont;
+}
