--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -3,6 +3,18 @@ body {
   font-size: 62.5%;
 }
 .main-content {
-  background: $lightgray;
+  background: rgba($lightgray, 0.7);
   font-family: $mainFont;
+  height: 100vh;
+}
+.background-image {
+  position: fixed;
+  left: 0;
+  right: 0;
+  z-index: -1;
+  filter: blur(10px);
+}
+#bg-image {
+  width: 100%;
+  height: 100vh;
 }
