--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,6 +15,8 @@
     <%= render 'layouts/navigation' %>
 
     <div class="offset-sm-1 col-sm-10 main-content">
+
+      <div class="background-image"><%= image_tag('bg2.jpg',id:'bg-image') %></div>
       <%= yield %>
 
     </div>
