Create partial file layouts/about and render in index.html.erb

--- a/app/views/layouts/header/_header_text_anim.html.erb
+++ b/app/views/layouts/header/_header_text_anim.html.erb
@@ -3,11 +3,11 @@
 
 
   <h2>Hello, my name is Mike.</h2>
-  <h2>I am a
+  <h2>I'm a
     <span
        class="txt-rotate"
        data-period="1000"
-       data-rotate='[ "Rails developer.", "personal trainer.", "musician." ]'>
+       data-rotate='[ "full-stack web developer.", "personal trainer.", "musician." ]'>
     </span>
   </h2>
 
