beginning to add content to About section, added about icons with some basic formatting in new about.scss file

--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -1,1 +1,12 @@
 <h1 class="text-center">ABOUT</h1>
+
+<div class="text-center">
+  <h2>- Quick - Responsive - Dynamic - Friendly -</h2>
+
+  <span id="icons-wrapper">
+    <%= image_tag('icon_quick.png', class:'icon-control') %>
+    <%= image_tag('icon_responsive.png', class:'icon-control') %>
+    <%= image_tag('icon_dynamic.png', class:'icon-control') %>
+    <%= image_tag('icon_friendly.png', class:'icon-control') %>
+  </span>
+</div>
