--- a/app/assets/stylesheets/partials/header/bg_anim.scss
+++ b/app/assets/stylesheets/partials/header/bg_anim.scss
@@ -1,6 +1,7 @@
 #myAnimation {
   margin: 0 !important;
   padding: 0 !important;
-  max-width: 100%;
-  max-height: 50%;
+  /*max-width: 100%;
+  max-height: 50%;*/
+  width: 100%;
 }
