--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -1,5 +1,5 @@
 <h1 class="text-center">ABOUT</h1>
-
+<!--
 <div class="text-center">
   <h2>- Quick - Responsive - Dynamic - Friendly -</h2>
 
@@ -9,4 +9,26 @@
     <%= image_tag('icon_dynamic.png', class:'icon-control') %>
     <%= image_tag('icon_friendly.png', class:'icon-control') %>
   </span>
+</div>
+-->
+<div class="row text-center">
+  <div class="col-sm-3"><h2 class="about-header">Quick</h2></div>
+  <div class="col-sm-3"><h2 class="about-header">Responsive</h2></div>
+  <div class="col-sm-3"><h2 class="about-header">Dynamic</h2></div>
+  <div class="col-sm-3"><h2 class="about-header">Friendly</h2></div>
+</div>
+
+<div class="row text-center">
+  <div class="col-sm-3 wiggle-me">
+    <%= image_tag('icon_quick.png', class:'icon-control') %>
+  </div>
+  <div class="col-sm-3 wiggle-me">
+    <%= image_tag('icon_responsive.png', class:'icon-control') %>
+  </div>
+  <div class="col-sm-3 wiggle-me">
+    <%= image_tag('icon_dynamic.png', class:'icon-control') %>
+  </div>
+  <div class="col-sm-3 wiggle-me">
+    <%= image_tag('icon_friendly.png', class:'icon-control') %>
+  </div>
 </div>
