Add blurbs to about section headers/icons, add some basic styling, create about_blurbs.scss

--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -1,16 +1,6 @@
 <h1 class="text-center">ABOUT</h1>
-<!--
-<div class="text-center">
-  <h2>- Quick - Responsive - Dynamic - Friendly -</h2>
 
-  <span id="icons-wrapper">
-    <%= image_tag('icon_quick.png', class:'icon-control') %>
-    <%= image_tag('icon_responsive.png', class:'icon-control') %>
-    <%= image_tag('icon_dynamic.png', class:'icon-control') %>
-    <%= image_tag('icon_friendly.png', class:'icon-control') %>
-  </span>
-</div>
--->
+<!-- About Headers -->
 <div class="row text-center">
   <div class="col-sm-3"><h2 class="about-header">Quick</h2></div>
   <div class="col-sm-3"><h2 class="about-header">Responsive</h2></div>
@@ -18,6 +8,7 @@
   <div class="col-sm-3"><h2 class="about-header">Friendly</h2></div>
 </div>
 
+<!-- About Icons -->
 <div class="row text-center">
   <div class="col-sm-3 wiggle-me">
     <%= image_tag('icon_quick.png', class:'icon-control') %>
@@ -30,5 +21,24 @@
   </div>
   <div class="col-sm-3 wiggle-me">
     <%= image_tag('icon_friendly.png', class:'icon-control') %>
+  </div>
+</div>
+
+<!-- About Blurbs -->
+<div class="row text-center">
+  <div class="col-sm-3 about-blurb">
+    <div class="blurb-text">Speed is my highest priority. In the day of instant gratification,
+      who wants to wait?</div>
+  </div>
+  <div class="col-sm-3 about-blurb">
+    <div class="blurb-text">My designs will fit any device, in <div class="wiggle-me">style.</div></div>
+  </div>
+  <div class="col-sm-3 about-blurb">
+    <div class="blurb-text">My passion for animations drives me to create pages that
+    come to life.</div>
+  </div>
+  <div class="col-sm-3 about-blurb">
+    <div class="blurb-text">UX is everything! My designs are intuitive and fun
+    to interact with.</div>
   </div>
 </div>
