--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -26,19 +26,32 @@
 
 <!-- About Blurbs -->
 <div class="row text-center">
+
   <div class="col-sm-3 about-blurb">
-    <div class="blurb-text">Speed is my highest priority. In the day of instant gratification,
-      who wants to wait?</div>
+    <div class="blurb-text">
+      Speed is my highest priority. In the day of instant gratification,
+      <div class="wiggle-me wiggle-text">who wants to wait?</div>
+    </div>
   </div>
+
   <div class="col-sm-3 about-blurb">
-    <div class="blurb-text">My designs will fit any device, in <div class="wiggle-me">style.</div></div>
+    <div class="blurb-text">
+      My designs will fit any device,
+      <div class="wiggle-me wiggle-text">in style.</div>
+    </div>
   </div>
+
   <div class="col-sm-3 about-blurb">
-    <div class="blurb-text">My passion for animations drives me to create pages that
-    come to life.</div>
+    <div class="blurb-text">
+      My passion for animations drives me to create pages that
+      <div class="wiggle-me wiggle-text">come to life.</div>
+    </div>
   </div>
+
   <div class="col-sm-3 about-blurb">
-    <div class="blurb-text">UX is everything! My designs are intuitive and fun
-    to interact with.</div>
+    <div class="blurb-text">
+      UX is everything! My designs are intuitive and
+      fun to <div class="wiggle-me wiggle-text">interact with.</div>
+    </div>
   </div>
 </div>
