--- a/app/assets/stylesheets/base/globals.scss
+++ b/app/assets/stylesheets/base/globals.scss
@@ -5,7 +5,7 @@ body {
 .main-content {
   background: rgba($lightgray, 0.7);
   font-family: $mainFont;
-  height: 100vh;
+  //height: 100vh;
 }
 .background-image {
   position: fixed;
