begin the projects section, add _projects.html.erb and render in index view, create projects folder to house each separate project, create partials for each project and render those to _projects.html.erb, create projects.scss

--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -1,6 +1,6 @@
 <div class="about-wrapper">
 
-  <h1 class="text-center">ABOUT</h1>
+  <h1 class="text-center" id="about">ABOUT</h1>
 
   <%= render 'layouts/about/about_headers' %>
   <%= render 'layouts/about/about_icons' %>
