update images for projects, add styling to projects section in projects.scss, create jquery script to create transition on hover over projects

--- a/app/views/layouts/_projects.html.erb
+++ b/app/views/layouts/_projects.html.erb
@@ -1,19 +1,31 @@
-<!-- Row 1 -->
-<div class="row text-center">
-  <div class="col-sm-6">
-    <%= render 'layouts/projects/whats_your_number' %>
-  </div>
-  <div class="col-sm-6">
-    <%= render 'layouts/projects/donut_ninja' %>
-  </div>
-</div>
+<div class="projects-wrapper">
 
-<!-- Row 2 -->
-<div class="row text-center">
-  <div class="col-sm-6">
-    <%= render 'layouts/projects/courtney_dutra' %>
+  <!-- Row 1 -->
+  <div class="row text-center">
+    <div class="col-sm-12">
+      <h1 id="projects">PROJECTS</h1>
+    </div>
   </div>
-  <div class="col-sm-6">
-    <%= render 'layouts/projects/profilo_day_spa' %>
+
+  <!-- Row 2 -->
+  <div class="row text-center">
+    <div class="col-sm-6">
+      <%= render 'layouts/projects/whats_your_number' %>
+    </div>
+    <div class="col-sm-6">
+      <%= render 'layouts/projects/donut_ninja' %>
+    </div>
   </div>
-</div>
+
+  <!-- Row 3 -->
+  <div class="row text-center">
+    <div class="col-sm-6">
+      <%= render 'layouts/projects/courtney_dutra' %>
+    </div>
+    <div class="col-sm-6">
+      <%= render 'layouts/projects/profilo_day_spa' %>
+    </div>
+  </div>
+
+
+</div><!-- close .projects-wrapper -->
