begin contact form section by creating _contact_me partial, rendering it to index.html.erb view, and creating corresponding contact.scss

--- a/app/assets/stylesheets/partials/projects.scss
+++ b/app/assets/stylesheets/partials/projects.scss
@@ -1,6 +1,6 @@
 .projects-wrapper {
   background: rgba($black, 0.6);
-  height: 800px;
+  padding-bottom: 10em;
 }
 .project-link {
   width: inherit;
