Update styling of navigation bar/ dropdown behavior

--- a/app/assets/stylesheets/partials/header/text_anim.scss
+++ b/app/assets/stylesheets/partials/header/text_anim.scss
@@ -1,8 +1,15 @@
 
 .on-top {
-  background-color: $black;
+  background-color: rgba($black,0.3);
   color: $green;
-  // top right bottom left
   padding: 2em 0em 2em 0em;
-
+  //new below
+  border: 2px solid $black;
 }
+/*
+#text-carousel {
+  position: absolute;
+  //top: 1em;
+  z-index: 2;
+}
+*/
