--- a/app/views/layouts/header/_header_text_anim.html.erb
+++ b/app/views/layouts/header/_header_text_anim.html.erb
@@ -28,4 +28,12 @@
 
 
 </script>
+
+<script>
+  var placement = document.getElementById('text-carousel');
+  var animHeight = document.getElementById('myAnimation');
+  var $difference = $(animHeight).height() - $(placement).height();
+  placement.style.top = ($difference) + 'px';
+
+</script>
 -->
