--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -1,21 +1,38 @@
-<nav class="navbar navbar-expand-lg ">
+<nav class="navbar navbar-expand-lg " id="home">
   <div class="container">
 
 
-
-    <a class="navbar-brand" href="#">MichaelHQ</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <li class="nav-item dropdown list-unstyled">
+      <!--<a class="navbar-brand" href="#">MichaelHQ</a>-->
+      <a class="navbar-brand dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+        MichaelHQ
+      </a>
+      <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+        <a class="dropdown-item" href="#home">Home</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#about">About</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#projects">Projects</a>
+        <div class="dropdown-divider"></div>
+        <a class="dropdown-item" href="#contact">Contact</a>
+      </div>
+    </li>
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+          <a class="nav-link" href="#">Home<span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
+          <a class="nav-link" href="#">About</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#">Contact</a>
+        </li>
+<!--
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
             Dropdown
@@ -27,15 +44,16 @@
             <a class="dropdown-item" href="#">Something else here</a>
           </div>
         </li>
+-->
       </ul>
 
 
-
+<!--
       <form class="form-inline my-2 my-lg-0">
         <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
       </form>
-
+-->
 
 
     </div><!--navbar-collapse-->
