Make contact section, add social media icons from cloudfare, refactor into partials inside layouts/contact folder, add styles via new my_email.scss, social_media.scss, up_arrow_nav.scss files, found inside partials/contact folder, add basic footer section as placeholder, import newly added contact folder containing stylesheets into application.scss

--- a/app/views/layouts/_contact_me.html.erb
+++ b/app/views/layouts/_contact_me.html.erb
@@ -1,9 +1,21 @@
+<head>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+</head>
+
 <div id="contact-wrapper">
 
   <h1 class="text-center" id="contact">CONTACT ME</h1>
 
   <div class="row text-center">
     <div class="col-sm-12">
+
+      <!-- EMAIL -->
+      <%= render 'layouts/contact/my_email' %>
+      <!-- SOCIAL MEDIA ICONS -->
+      <%= render 'layouts/contact/social_media_icons' %>
+      <!-- UP ARROW -->
+      <%= render 'layouts/contact/up_arrow_nav' %>
+
     </div>
   </div>
 
