Add scroll animation and functionality to anchors from navigation bar links, update tech section in About category to animate once scrolls into view, add styling to it in about_tech.scss

--- a/app/assets/stylesheets/partials/about/about_tech.scss
+++ b/app/assets/stylesheets/partials/about/about_tech.scss
@@ -17,6 +17,10 @@
   text-align: right;
   padding-right: 2em;
 }
+.tiny {
+  font-size: 10px;
+  margin-right: 2px;
+}
 #tech-table {
   font-size: 1.6em;
   border: 2px solid rgba($black, 0.1);
