--- a/app/assets/stylesheets/partials/about/about_tech.scss
+++ b/app/assets/stylesheets/partials/about/about_tech.scss
@@ -21,6 +21,9 @@
   font-size: 10px;
   margin-right: 2px;
 }
+#techWindow {
+  min-width: 370px;
+}
 #tech-table {
   font-size: 1.6em;
   border: 2px solid rgba($black, 0.1);
