Rework About section so that it can resize/restack more efficiently on smaller screens, refactor into 4 new partials: _about_quick/responsive/dynamic/friendly.html.erb, begin responsive styling in responsive.scss, import responsive folder to application.scss, adjust little style things here and there to make design more crisp, delete old About section partials that are no longer needed because they have been refactored: _about_headers/icons/blurbs.html.erb

--- a/app/views/layouts/_about.html.erb
+++ b/app/views/layouts/_about.html.erb
@@ -2,9 +2,13 @@
 
   <h1 class="text-center" id="about">ABOUT</h1>
 
-  <%= render 'layouts/about/about_headers' %>
-  <%= render 'layouts/about/about_icons' %>
-  <%= render 'layouts/about/about_blurbs' %>
+  <div class="row">
+    <%= render 'layouts/about/about_quick' %>
+    <%= render 'layouts/about/about_responsive' %>
+    <div class="clear-medium"></div>
+    <%= render 'layouts/about/about_dynamic' %>
+    <%= render 'layouts/about/about_friendly' %>
+  </div>
   <%= render 'layouts/about/about_bio' %>
 
 </div>
