--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'false' %>
     <link href="https://fonts.googleapis.com/css?family=Audiowide|Ubuntu" rel="stylesheet">
-    
+    <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
 
   <body>
