--- a/app/views/layouts/_projects.html.erb
+++ b/app/views/layouts/_projects.html.erb
@@ -9,20 +9,22 @@
 
   <!-- Row 2 -->
   <div class="row text-center">
-    <div class="col-sm-6">
+    <div class="col-sm-6 proj-slide-left">
       <%= render 'layouts/projects/whats_your_number' %>
     </div>
-    <div class="col-sm-6">
+    <div class="clear-small"></div>
+    <div class="col-sm-6 proj-slide-left">
       <%= render 'layouts/projects/donut_ninja' %>
     </div>
   </div>
 
   <!-- Row 3 -->
   <div class="row text-center">
-    <div class="col-sm-6">
+    <div class="col-sm-6 proj-slide-left">
       <%= render 'layouts/projects/courtney_dutra' %>
     </div>
-    <div class="col-sm-6">
+    <div class="clear-small"></div>
+    <div class="col-sm-6 proj-slide-left">
       <%= render 'layouts/projects/profilo_day_spa' %>
     </div>
   </div>
