Add links to my projects

--- a/app/views/layouts/projects/_donut_ninja.html.erb
+++ b/app/views/layouts/projects/_donut_ninja.html.erb
@@ -1,4 +1,4 @@
-<a href="#" class="project-link" id="donutninja">
+<a href="http://donut-ninja.herokuapp.com" target="_blank" class="project-link" id="donutninja">
   <%= image_tag('project-donutninja.png', class:'project-image') %>
   <div class="project-hover">
     <span class="project-title-on-hover">Donut Ninja</span>
