--- a/app/views/layouts/projects/_profilo_day_spa.html.erb
+++ b/app/views/layouts/projects/_profilo_day_spa.html.erb
@@ -1,4 +1,4 @@
-<a href="#" class="project-link" id="profilo">
+<a href="http://profilodayspa.com" target="_blank" class="project-link" id="profilo">
   <%= image_tag('project-profilo.png', class:'project-image') %>
   <div class="project-hover">
     <span class="project-title-on-hover">Profilo Day Spa</span>
