--- a/app/views/layouts/projects/_whats_your_number.html.erb
+++ b/app/views/layouts/projects/_whats_your_number.html.erb
@@ -1,4 +1,4 @@
-<a href="#" class="project-link" id="whatsyournumber">
+<a href="http://yournumber.herokuapp.com" target="_blank" class="project-link" id="whatsyournumber">
   <%= image_tag('project-whatsyournumber.png', class:'project-image') %>
   <div class="project-hover">
     <span class="project-title-on-hover">What's Your Number?</span>
