--- a/app/views/layouts/projects/_courtney_dutra.html.erb
+++ b/app/views/layouts/projects/_courtney_dutra.html.erb
@@ -1,4 +1,4 @@
-<a href="#" class="project-link" id="courtneydutra">
+<a href="http://courtneydutra.herokuapp.com" target="_blank" class="project-link" id="courtneydutra">
   <%= image_tag('project-courtneydutra.png', class:'project-image') %>
   <div class="project-hover">
     <span class="project-title-on-hover">Courtney Dutra</span>
