--- a/app/assets/stylesheets/partials/about/about_headers.scss
+++ b/app/assets/stylesheets/partials/about/about_headers.scss
@@ -1,12 +1,12 @@
 .about-header {
   //background-color: rgba($purple, 0.01);
-  padding: 0.6rem 0rem 0.6rem 0rem;
+  padding: 0.6rem 0rem;
   border: 2px solid rgba($lightgray, 0.01);
-  border-radius: 0.9rem 1rem 0.9rem 1rem;
+  border-radius: 0.9rem 1rem;
   transition: border 3s, padding 1s, border-radius 1s;
 }
 .about-header:hover {
   border: 2px solid $blue;
-  padding: 0.6rem 0.2rem 0.6rem 0.2rem;
-  border-radius: 1rem 0.9rem 1rem 0.9rem;
+  padding: 0.6rem 0.2rem;
+  border-radius: 1rem 0.9rem;
 }
