--- a/app/assets/stylesheets/responsive/responsive.scss
+++ b/app/assets/stylesheets/responsive/responsive.scss
@@ -29,6 +29,9 @@
     clear: both;
     width: 100%;
   }
+  #about-responsive > .about-header:hover {
+    padding: 0.6rem 0rem;
+  }
   .proj-slide-left {
     display: block;
     margin: auto;
